updated to views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,13 +32,11 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
-        <li><a href="/ferrets">Ferrets</a></li>
+        <li><a href="/ferrets">All Ferrets</a></li>
+        <li><a href="/busyness">My Busyness</a></li>
         <li><a href="/opportunities">Opportunities</a></li>
         <li><a href="/owners">Owners</a></li>
-        <li><a href="/questions">Questionnaire</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="/owners/new"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <li><a href="/questions">Questions</a></li>
         <li><a href="/sessions/new"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
         <li><a href="/sessions/destroy"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
       </ul>
