--- a/app/views/owners/index.html.erb
+++ b/app/views/owners/index.html.erb
@@ -1,8 +1,8 @@
 <h1>Owners</h1>
 
 <p>Owners are advised not to accept an adoption request without a response to the screening 
-questionnaire.</p>
-
+questionnaire provided and veterinarian confirmation. Please check your state and local laws for any restrictions regarding ferrets. For example, ferrets are illegal to keep as pets within New York City.</p>
+<br>
 <div>
   <% @owners.each do |owner| %>
     <h3>
