--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,4 +1,6 @@
 <h1>Ferret Adoption <i class='fas fa-paw' style='font-size:36px'></i></h1>
+<br>
+<p>New user? <%= link_to "Sign up here.", signup_path %></p>
 
   <div class="polaroid">
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/Lady_with_an_Ermine_-_Leonardo_da_Vinci_-_Google_Art_Project.jpg/1920px-Lady_with_an_Ermine_-_Leonardo_da_Vinci_-_Google_Art_Project.jpg" alt="Lady with an Ermine" style="width: 300px">
