--- a/app/views/static/questions.html.erb
+++ b/app/views/static/questions.html.erb
@@ -1,4 +1,4 @@
-<h1>Questionnaire</h1>
+<h1>Screening Process</h1>
 
 <p>Thanks for wanting to adopt! <i class='fas fa-heart' style='color:crimson'></i> Answering this brief questionnaire will help us learn which ferret will best fit your family and determine if you need more info/support in any area.</p>
 
@@ -41,4 +41,4 @@
 </ul>
 </ol>
 <br><br>
-<h6>Source: The Ferret Association of Connecticut, Inc.</h6>
+<h6>Source: The Ferret Association of Connecticut, Inc. Edited for brevity.</h6>
