--- a/app/views/opportunities/index.html.erb
+++ b/app/views/opportunities/index.html.erb
@@ -2,7 +2,7 @@
 
 <br>
 
-<button style='font-size:16px'><%= link_to 'Add Opportunity', new_owner_opportunity_path(@owner) %> <i class='fas fa-heart' style='color:crimson'></i></button>
+<button><%= link_to 'Add Opportunity', new_owner_opportunity_path(@owner) %> <i class='fas fa-heart' style='color:crimson'></i></button>
 
 <div>
   <% @opportunities.each do |opportunity| %>
