troubleshooting form submission ferret

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,10 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://kit.fontawesome.com/675fd64958.js" crossorigin="anonymous"></script>
-  
-  </head>
+ 
+ </head>
  
   <body>
 
@@ -40,7 +40,7 @@
         <li><a href="/owners">Owners</a></li>
         <li><a href="/questions">Questions</a></li>
         <li><a href="/sessions/new">Login</a></li>
-        <li><a href="/sessions/destroy"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+        <li><a href="/sessions/destroy">Logout</a></li>
       </ul>
 
     </div>
