--- a/app/views/static/questions.html.erb
+++ b/app/views/static/questions.html.erb
@@ -21,10 +21,10 @@
 
 <li> Do you need a cage or other supplies?</li>
 
-<li> Do you have a specific food you plan to use? <em>(We’re happy to offer suggestions if needed and you will get a sample of what the ferret currently eats.)</em></li>
+<li> Do you have a specific food you plan to use? <em>(We’re happy to offer suggestions if needed and you will receive a sample of what the ferret currently eats.)</em></li>
 
 <li> Do you know how to clean ears, clip nails and brush teeth? <b>We will provide you with safety/care instructions.</b> We may test your knowledge with a few more questions: </li>
-<ul>
+<ul style="list-style-type:disc;">
 <br>
 <li> Would you select a peppermint scented shampoo to bathe your ferret with weekly?</li> 
 <li> What kind of litter box/pan material would you use? </li>
