fixed typo opps controller

--- a/app/views/static/questions.html.erb
+++ b/app/views/static/questions.html.erb
@@ -41,4 +41,4 @@
 </ul>
 </ol>
 <br><br>
-<h6>Source: The Ferret Association of Connecticut, Inc. Edited for brevity.</h6>
+<h6>Source: The Ferret Association of Connecticut. Edited for brevity.</h6>
