--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -5,3 +5,7 @@
 <button style='font-size:16px'><%= link_to 'Add Ferret', new_owner_ferret_path(@owner) %> <i class='fas fa-paw'></i></button>
 <br><br><br>
 <button style='font-size:16px'><%= link_to 'Add Opportunity', new_owner_opportunity_path(@owner) %> <i class='fas fa-heart' style='color:crimson'></i></button>
+
+<br><br><br>
+
+<button><%= link_to 'Edit My Details', edit_owner_path(@owner) %> </button>
