--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
 
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li><%= link_to 'Home', root_path %></li>
+        <li class="active"><%= link_to 'Home', root_path %></li>
         <li><%= link_to 'About', about_path %></li>
         <li><%= link_to 'All Ferrets', ferrets_path %></li>
         <li><%= link_to 'Opportunities', opportunities_path %></li>
@@ -47,7 +47,7 @@
 </nav>
 
 
-    <div class="container">
+   <div class="container">
 
       <div class="main-content">
 
