--- a/app/views/opportunities/_form.html.erb
+++ b/app/views/opportunities/_form.html.erb
@@ -1,6 +1,7 @@
 <%= render 'errors' %>
 
 <%= form_for([@owner, @opportunity]) do |f| %>
+<%= f.hidden_field :owner_id, value: session[:owner_id] %>
 
   <b><label>Title:</label></b>
   <%= f.text_field :title, required: true %><br>
@@ -8,12 +9,12 @@
   <b><label>Circumstance:</label></b><br>
   <%= f.text_area :circumstance, required: true %><br>
   <br>
-  <b><label>Ferret(s):</label></b>&nbsp;&nbsp;
-  <%= f.collection_select :ferret_id, Ferret.order(:name), :id, :name, include_blank: true %>
+  <b><label>Ferret(s):</label></b><br>
+  <%= f.hidden_field :ferret %>
+  <%= f.collection_select(:ferret_id, Ferret.order(:name), :id, :name, {}, {:multiple => true}) %>
   <br><br>
   <b><label>Active case?</label></b>&nbsp;&nbsp;&nbsp;<%= f.check_box :active, {}, "true", "false" %><br>
   <h5>All cases are marked as active until you deactivate them.</h5>
-  
   <br>
   <%= f.submit "Submit" %>
 <% end %>
