--- a/app/views/opportunities/_form.html.erb
+++ b/app/views/opportunities/_form.html.erb
@@ -1,7 +1,6 @@
 <%= render 'errors' %>
 
-<%= form_for([@owner, @opportunity]) do |f| %>
-<%= f.hidden_field :owner_id, value: session[:owner_id] %>
+<%= form_for(@opportunity) do |f| %>
 
   <b><label>Title:</label></b>
   <%= f.text_field :title, required: true %><br>
@@ -10,11 +9,11 @@
   <%= f.text_area :circumstance, required: true %><br>
   <br>
   <b><label>Ferret(s):</label></b><br>
-  <%= f.hidden_field :ferret %>
   <%= f.collection_select(:ferret_id, Ferret.order(:name), :id, :name, {}, {:multiple => true}) %>
   <br><br>
   <b><label>Active case?</label></b>&nbsp;&nbsp;&nbsp;<%= f.check_box :active, {}, "true", "false" %><br>
   <h5>All cases are marked as active until you deactivate them.</h5>
+  <%= f.hidden_field :owner_id, value: session[:owner_id] %>
   <br>
   <%= f.submit "Submit" %>
 <% end %>
@@ -22,3 +21,4 @@
 <br>
 <br>
 <b>Sales or rehoming fees of any kind are not permitted, because all ferrets are vetted before bringing them home.</b>
+
