--- a/app/views/opportunities/new.html.erb
+++ b/app/views/opportunities/new.html.erb
@@ -1,4 +1,8 @@
 <h1>Add an Opportunity <i class='fas fa-heart' style='font-size:24px; color:crimson'></i></h1>
+<br>
 
 <%= render 'form' %>
 
+<br>
+<br>
+<b>Sales or rehoming fees of any kind are not permitted, because all ferrets are vetted before bringing them home.</b>
