centered content div

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,6 +48,7 @@
 
 
    <div class="container">
+     <div class="centering">
 
       <div class="main-content">
 
@@ -59,7 +60,7 @@
 
         <%= yield %>
       </div>
-    
+     </div>
     </div>
 
       <footer class="container-fluid">
