--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,12 @@
  *= require_self
  */
 
+.centering {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+}
+
 .field_with_errors {
   padding: 2px;
   background-color: crimson;
@@ -64,6 +70,6 @@ div.polaroid {
 }
 
 div.image_text {
-  text-align: left;
+  text-align: center;
   padding: 10px 20px;
 }
