--- a/app/views/ferrets/index.html.erb
+++ b/app/views/ferrets/index.html.erb
@@ -10,5 +10,5 @@
 
 
   <% @ferrets.each do |ferret| %>
-    <div><b><%= link_to ferret.name, ferret_path(ferret) %></b>  &bull;  Needs a home: <em><%= ferret.home %></em></div>
+    <div><b><%= link_to ferret.name, ferret_path(ferret) %></b> &bull; Needs a home: <em><%= ferret.home %></em></div><br>
   <% end %>
