--- a/app/views/ferrets/edit.html.erb
+++ b/app/views/ferrets/edit.html.erb
@@ -4,6 +4,6 @@
 
 <br><br>
 
-<%= form_tag ({controller: 'ferrets', action: 'destroy', method: 'post'}) do %>
-  <input type=submit value='delete'>
+<%= form_tag owner_ferret_path(@ferret), method: "delete" do %>
+  <%= submit_tag "Delete" %>
 <% end %>
