--- a/app/views/owners/index.html.erb
+++ b/app/views/owners/index.html.erb
@@ -3,10 +3,9 @@
 <p>Owners are advised not to accept an adoption request without a response to the screening 
 questionnaire provided and veterinarian confirmation. Please check your state and local laws for any restrictions regarding ferrets. For example, <em>ferrets are illegal to keep as pets within New York City.</em></p>
 <br>
+
 <div>
   <% @owners.each do |owner| %>
-    <h3>
-      <%= link_to owner.first_name, owner_path(owner) %>  - <%= owner.quantity %> ferrets
-    </h3>
+    <div class="centering"><h3><%= link_to owner.first_name, owner_path(owner) %>  - <%= owner.quantity %> ferrets</h3></div><br>
   <% end %>
 </div>
