changed to only one ferret per opp submit

--- a/app/views/opportunities/show.html.erb
+++ b/app/views/opportunities/show.html.erb
@@ -3,6 +3,13 @@
 <p><%= @opportunity.circumstance %></p>
 <br>
 
+<%= @opportunity.ferret.name %>
+
+
+
+<br><br>
+
+
 <% if @opportunity.active %>
   <b>This case is still active.</b>
 <% else %>
