--- a/app/views/opportunities/_form.html.erb
+++ b/app/views/opportunities/_form.html.erb
@@ -2,6 +2,7 @@
 
 <%= form_for([@owner, @opportunity]) do |f| %>
 
+   <h5>Please note in title whether you are looking to adopt or rehome.</h5>
   <b><label>Title:</label></b>
   <%= f.text_field :title, required: true %><br>
   <br>
@@ -9,24 +10,16 @@
   <%= f.text_area :circumstance, required: true %><br>
   <br>
   <b><label>Ferret(s):</label></b><br>
-
-
-  <%= f.collection_check_boxes(:ferret_id, Owner.ferret.all, :id, :name) do |b| %>
-    <div class="row">
-    <%= b.label(class: "check_box") do %>
-      <div class="col-xs-4">
-        <%= b.check_box(class: "check_box") %> <%= b.object.name %>
-      </div>
-    <% end %>
-  </div>
-<% end %>
-
-  
-  <br>
+  <%= f.collection_select(:ferret_id, Ferret.order(:name), :id, :name, prompt: true) %>
+  <br><br>
   <b><label>Active case?</label></b>&nbsp;&nbsp;&nbsp;<%= f.check_box :active, {}, "true", "false" %><br>
   <h5>All cases are marked as active until you deactivate them.</h5>
   <%= f.hidden_field :owner_id, value: session[:owner_id] %>
   <br>
   <%= f.submit "Submit" %>
 <% end %>
+
+<br><br>
+
+<b>Sales or rehoming fees of any kind are not permitted, because all ferrets are vetted before bringing them home.</b>
 
