--- a/app/views/opportunities/index.html.erb
+++ b/app/views/opportunities/index.html.erb
@@ -2,6 +2,8 @@
 <br>
 
 <button><%= link_to 'Add Opportunity', new_owner_opportunity_path(@owner) %> <i class='fas fa-heart' style='color:crimson'></i></button>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<button><%= link_to 'Found a Home', found_home_path(@ferret) %> <i class='fas fa-heart' style='color:crimson'></i></button>
 <br><br>
 <br>
 
