added scope to list names A-Z

--- a/app/views/ferrets/found_home.html.erb
+++ b/app/views/ferrets/found_home.html.erb
@@ -3,3 +3,8 @@
 
 <br>
 
+<div>
+  <% @ferrets.each do |ferret| %>
+    <h3><%= @ferret.name %> <i class='fas fa-paw' style='font-size:30px'></i></h3><br>
+  <% end %>
+</div>
