corrected found_home view

--- a/app/views/ferrets/found_home.html.erb
+++ b/app/views/ferrets/found_home.html.erb
@@ -4,5 +4,9 @@
 <br>
 
 <div>
+
+  <% @ferrets.each do |ferret| %>
+    <div><h3><%= ferret.name %>, the <%= ferret.age %>-year old <%= ferret.color %></h3></div><br>
+  <% end %>
   
 </div>
