fixed omniauth log in

--- a/app/views/ferrets/found_home.html.erb
+++ b/app/views/ferrets/found_home.html.erb
@@ -1,5 +1,5 @@
 
-<h1><i class='fas fa-heart' style='color:crimson; font-size:36px'></i> Happy at Home! <i class='fas fa-heart' style='color:crimson; font-size:36px'></i></h1>
+<h1><i class='fas fa-heart' style='color:crimson; font-size:36px'></i>&nbsp;&nbsp;Happy at Home!&nbsp;&nbsp;<i class='fas fa-heart' style='color:crimson; font-size:36px'></i></h1>
 
 <br>
 
