added req_id to Owners

--- a/app/views/opportunities/show.html.erb
+++ b/app/views/opportunities/show.html.erb
@@ -17,7 +17,7 @@
 
 <br><br>
 <br>
-<button><%= link_to "Adoption Request", opportunities_path(owner_id: @owner.id), method: :post %> <i class='fas fa-heart' style='color:crimson'></i></button>
+<button><%= link_to "Adoption Request", opportunities_path(opportunity.id: @owner.req_id), method: :post %> <i class='fas fa-heart' style='color:crimson'></i></button>
 
 <br><br>
 <br>
