added image to about page

--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -15,5 +15,13 @@ A male ferret is called a hob; a female ferret is a jill. A spayed female is a s
 
 <p><b>Aging and geriatric ferrets need special attention and care.</b> <br>
 Commercially-bread ferrets are susceptible to several distinct health issues, particularly cancers affecting the adrenal glands, pancreas, and lymphatic system. With proper care, their average life span is 7 to 10 years.</p>
+
+<h6>Source: Wikipedia.</h6>
 <br>
-<h6>Source: Wikipedia</h6>
+
+<div class="polaroid">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/7/71/Elizabeth_Ann_20210402.jpg" alt="Elizabeth Ann" style="width: 300px">
+    <div class="image_text">
+      <h6>The black-footed ferret, Mustela nigripes, is one of the most endangered and rarest land mammals in North America. Elizabeth Ann, born December 10, 2020, is the first cloned black-footed ferret and first-ever cloned U.S. endangered species. Wikipedia Commons; public domain.</h6>
+    </div>
+  </div>
