--- a/app/views/opportunities/show.html.erb
+++ b/app/views/opportunities/show.html.erb
@@ -6,8 +6,14 @@
 
 <p><%= @opportunity.circumstance %></p>
 <br><br>
+
 <h5>Shared by <%= @opportunity.owner.first_name %> on <%= @opportunity.updated_at.strftime("%B %d, %Y") %>.</h5>
-<br><br>
+
+<br><br><br>
+  
+<%= button_to "Create an Adoption Request", opportunity_adoption_requests_path(@opportunity), method: :post %></b>
+
+<br><br><br>
 
 <% if @opportunity.active %>
   <b>This case is still active.</b>
@@ -16,12 +22,4 @@
 <% end %>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <button><%= link_to 'Edit Details', edit_owner_opportunity_path(@owner) %></button>
-
-<br><br>
-<br>
-
-<%= render 'requestor' %>
-
-<br><br>
-<br>
 
