--- a/app/views/opportunities/my_opportunities.html.erb
+++ b/app/views/opportunities/my_opportunities.html.erb
@@ -1,4 +1,4 @@
-<h1>View Your Opportunities</h1>
+<h1>Your Listed Opportunities</h1>
 
 <% @opportunities.each do |opportunity| %>
   <%= link_to opportunity.title, opportunity %>
